hphp/hack/test/typecheck/reified_generics/new_static2.php
<?hh

<<__ConsistentConstruct>>
class BaseClass {
  public function f(): void {
    new static();
  }
}


class ChildClass<reify T> extends BaseClass {}
